--- a/custom-email-code.html
+++ b/custom-email-code.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
 
     <script src="//use.typekit.net/iws6ohy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
@@ -15,7 +14,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="auth0-variables.js"> </script>
-    <script src="custom-email-code.js"> </script>
     <link href="app.css" rel="stylesheet">
   </head>
   <body class="home">
@@ -45,5 +43,59 @@
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
+    <script type="text/javascript">
+      'use strict';
+      // Initialize Auth0 Client instance
+      const auth0 = new Auth0({
+        // All these properties are set in auth0-variables.js
+        clientID: AUTH0_CLIENT_ID,
+        domain: AUTH0_DOMAIN
+      });
+
+      function sendEmail(){
+        const email = $('input.email').val();
+        auth0.startPasswordless({ email, send: 'code' }, err => {
+          if (err) {
+            console.log('error sending e-mail',err.error_description);
+            alert(`error sending e-mail: ${err.error_description}`);
+            return;
+          }
+          // the request was successful and you should 
+          // receive the code to the specified email
+          $(".enter-code").show();
+        });
+      }
+
+      function login(){
+        const username = $('input.email').val();
+        const password= $('input.code').val();
+
+        //submit the passcode to complete authentication
+        auth0.login(
+          {
+            connection:'email',
+            username,
+            password,
+            'sso':false
+          },(err, profile, id_token, access_token) => {
+            if (err){
+              console.log('error logging-in',err);
+              alert(`Couldn't login ${err.message}`);
+            } else {
+              console.log('profile',profile);
+              console.log('id_token',id_token);
+              console.log('access_token',access_token);
+              localStorage.setItem('userToken', id_token);
+              $('.login-box').hide();
+              $('.logged-in-box').show();
+              $('.nickname').text(profile.name);
+              $('.avatar').attr('src', profile.picture);
+            }
+          });
+      }
+
+    </script>
   </body>
 </html>
