--- a/custom-magic-link.html
+++ b/custom-magic-link.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
 
     <script src="//use.typekit.net/iws6ohy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
@@ -15,7 +14,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="auth0-variables.js"> </script>
-    <script src="custom-magic-link.js"> </script>
     <link href="app.css" rel="stylesheet">
   </head>
   <body class="home">
@@ -43,5 +41,61 @@
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
+    <script type="text/javascript">
+      'use strict';
+
+      // Initialize Auth0 Client instance
+      const auth0 = new Auth0({
+        // All these properties are set in auth0-variables.js
+        clientID: AUTH0_CLIENT_ID,
+        domain: AUTH0_DOMAIN
+      });
+
+      function sendMagicLink(){
+        const email = $('input.email').val();
+        auth0.startPasswordless({email}, err => {
+          if (err) {
+            console.log('error sending e-mail',err.error_description);
+            alert(`error sending e-mail: ${err.error_description}`);
+            return;
+          }
+          // the request was successful and you should 
+          // receive the passcode to the specified phone
+          $(".enter-email").hide();
+          $(".email-sent").show();
+        });
+      }
+
+      $(document).ready(() => {
+        var hash = auth0.parseHash(window.location.hash);
+
+        if (hash && hash.id_token) {
+          //save the token in local storage:
+          localStorage.setItem('id_token', hash.id_token);
+          console.log('hash',hash);
+          $('.login-box').hide();
+          $('.logged-in-box').show();
+          //retrieve profile
+          auth0.getProfile(hash.id_token, function (err, profile) {
+            if (err){
+              console.log('err',err);
+              alert(`There was an error retrieving your profile: ${err.message}`);
+            } else {
+              localStorage.setItem('profile', profile);
+              $('.nickname').text(profile.name);
+              $('.avatar').attr('src', profile.picture);
+            }
+          });
+        }
+
+        if (hash && hash.error) {
+          alert('There was an error: ' + hash.error + '\n' + hash.error_description);
+        }
+
+      });
+
+    </script>
   </body>
 </html>
