--- a/custom-sms.html
+++ b/custom-sms.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
 
     <script src="//use.typekit.net/iws6ohy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
@@ -15,7 +14,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="auth0-variables.js"> </script>
-    <script src="custom-sms.js"> </script>
     <link href="app.css" rel="stylesheet">
   </head>
   <body class="home">
@@ -45,5 +43,52 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
+    <script type="text/javascript">
+      'use strict';
+      // Initialize Auth0 Client instance
+      const auth0 = new Auth0({
+        // All these properties are set in auth0-variables.js
+        clientID: AUTH0_CLIENT_ID,
+        domain: AUTH0_DOMAIN
+      });
+
+      function sendSMS(){
+        const phoneNumber = $('input.phone-number').val();
+        auth0.startPasswordless({ phoneNumber}, err => {
+          if (err) {
+            console.log('error sending SMS',err.error_description);
+            alert(`error sending SMS: ${err.error_description}`);
+            return;
+          }
+          // the request was successful and you should 
+          // receive the passcode to the specified phone
+          $(".enter-phone").hide();
+          $(".enter-code").show();
+        });
+      }
+
+      function login(){
+        const phone = $('input.phone-number').val();
+        const passcode = $('input.code').val();
+        //submit the passcode to authenticate the phone
+        auth0.login({phone,passcode},function(err, profile, id_token, access_token){
+          if (err){
+            console.log('error logging-in',err);
+            alert(`Couldn't login ${err.message}`);
+          } else {
+            console.log('profile',profile);
+            console.log('id_token',id_token);
+            console.log('access_token',access_token);
+            localStorage.setItem('userToken', id_token);
+            $('.login-box').hide();
+            $('.logged-in-box').show();
+            $('.nickname').text(profile.name);
+            $('.avatar').attr('src', profile.picture);
+          }
+        });
+      };
+
+    </script>
   </body>
 </html>
