--- a/lock-email-code.html
+++ b/lock-email-code.html
@@ -1,38 +1,64 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-        <script src="//use.typekit.net/iws6ohy.js"></script>
-        <script>try{Typekit.load();}catch(e){}</script>
+    <script src="//use.typekit.net/iws6ohy.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- font awesome from BootstrapCDN -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- font awesome from BootstrapCDN -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <script src="auth0-variables.js"> </script>
-        <scripta src="lock-email-code.js"> </script>
-        <link href="app.css" rel="stylesheet">
-    </head>
-    <body class="home">
-        <div class="container">
-            <div class="login-page clearfix">
-              <div class="login-box auth0-box before">
-                <img src="https://i.cloudup.com/StzWWrY34s.png" />
-                <h3>Auth0 Passwordless Example</h3>
-                <p>Login with Email Code</p>
-                <button onclick="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</button>
-              </div>
-              <div class="logged-in-box auth0-box logged-in" style="display: none;">
-                <h1 id="logo"><img src="auth0_logo_final_blue_RGB.png" /></h1>
-                <img class="avatar"/>
-                <h2>Welcome <span class="nickname"></span></h2>
-              </div>
-            </div>
+    <script src="auth0-variables.js"> </script>
+    <link href="app.css" rel="stylesheet">
+  </head>
+  <body class="home">
+    <div class="container">
+        <div class="login-page clearfix">
+          <div class="login-box auth0-box before">
+            <img src="https://i.cloudup.com/StzWWrY34s.png" />
+            <h3>Auth0 Passwordless Example</h3>
+            <p>Login with Email Code</p>
+            <button onclick="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</button>
+          </div>
+          <div class="logged-in-box auth0-box logged-in" style="display: none;">
+            <h1 id="logo"><img src="auth0_logo_final_blue_RGB.png" /></h1>
+            <img class="avatar"/>
+            <h2>Welcome <span class="nickname"></span></h2>
+          </div>
         </div>
-    </body>
+    </div>
+    <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
+    <script type="text/javascript">
+      // Initialize Passwordless Lock instance
+      const lock = new Auth0LockPasswordless(
+        // All these properties are set in auth0-variables.js
+        AUTH0_CLIENT_ID,
+        AUTH0_DOMAIN
+      );
+
+      function login(){
+        // Open the lock in Email Code mode with the ability to handle
+        // the authentication in page
+        lock.emailcode((err, profile, id_token, state) => {
+          if (!err) {
+            console.log('profile',profile);
+            console.log('id_token',profile);
+            console.log('state',state);
+
+            // Save the JWT token.
+            localStorage.setItem('userToken', id_token);
+            $('.login-box').hide();
+            $('.logged-in-box').show();
+            $('.nickname').text(profile.name);
+            $('.avatar').attr('src', profile.picture);
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
