--- a/lock-sms.html
+++ b/lock-sms.html
@@ -1,38 +1,70 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <script src="//use.typekit.net/iws6ohy.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
-        <script src="//use.typekit.net/iws6ohy.js"></script>
-        <script>try{Typekit.load();}catch(e){}</script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- font awesome from BootstrapCDN -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- font awesome from BootstrapCDN -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-        <script src="auth0-variables.js"> </script>
-        <script src="lock-sms.js"> </script>
-        <link href="app.css" rel="stylesheet">
-    </head>
-    <body class="home">
-        <div class="container">
-            <div class="login-page clearfix">
-              <div class="login-box auth0-box before">
-                <img src="https://i.cloudup.com/StzWWrY34s.png" />
-                <h3>Auth0 Passwordless Example</h3>
-                <p>Login with SMS</p>
-                <a ng-click="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</a>
-              </div>
-              <div class="logged-in-box auth0-box logged-in" style="display: none;">
-                <h1 id="logo"><img src="auth0_logo_final_blue_RGB.png" /></h1>
-                <img class="avatar"/>
-                <h2>Welcome <span class="nickname"></span></h2>
-              </div>
-            </div>
+    <script src="auth0-variables.js"> </script>
+    <link href="app.css" rel="stylesheet">
+  </head>
+  <body class="home">
+    <div class="container">
+      <div class="login-page clearfix">
+        <div class="login-box auth0-box before">
+          <img src="https://i.cloudup.com/StzWWrY34s.png" />
+          <h3>Auth0 Passwordless Example</h3>
+          <p>Login with SMS</p>
+          <a ng-click="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</a>
         </div>
-    </body>
+        <div class="logged-in-box auth0-box logged-in" style="display: none;">
+          <h1 id="logo"><img src="auth0_logo_final_blue_RGB.png" /></h1>
+          <img class="avatar"/>
+          <h2>Welcome <span class="nickname"></span></h2>
+        </div>
+      </div>
+    </div>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        // Initialize Passwordless Lock instance
+        var lock = new Auth0LockPasswordless(
+          // All these properties are set in auth0-variables.js
+          AUTH0_CLIENT_ID,
+          AUTH0_DOMAIN
+        );
+
+        $('.btn-login').click(function(e) {
+          e.preventDefault();
+          // Open the lock in SMS mode with the ability to handle
+          // the authentication in page
+          lock.sms(function (err, profile, id_token, state) {
+            // to be called on failure or successfull authentication
+            if (err) {
+              // Error callback
+              console.log('There was an error',err);
+              alert('There was an error logging in');
+            } else {
+              // Success calback
+
+              // Save the JWT token.
+              localStorage.setItem('userToken', id_token);
+              console.log('profile',profile);
+              $('.login-box').hide();
+              $('.logged-in-box').show();
+              $('.nickname').text(profile.name);
+              $('.avatar').attr('src', profile.picture);
+            }
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
