--- a/custom-magic-link.html
+++ b/custom-magic-link.html
@@ -44,18 +44,17 @@
 
     <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
     <script type="text/javascript">
-      'use strict';
-
+      
       // Initialize Auth0 Client instance
-      const auth0 = new Auth0({
+      var auth0 = new Auth0({
         // All these properties are set in auth0-variables.js
         clientID: AUTH0_CLIENT_ID,
         domain: AUTH0_DOMAIN
       });
 
       function sendMagicLink(){
-        const email = $('input.email').val();
-        auth0.startPasswordless({email}, err => {
+        var email = $('input.email').val();
+        auth0.startPasswordless({email:email}, function(err) {
           if (err) {
             console.log('error sending e-mail',err.error_description);
             alert(`error sending e-mail: ${err.error_description}`);
@@ -68,7 +67,7 @@
         });
       }
 
-      $(document).ready(() => {
+      $(document).ready(function() {
         var hash = auth0.parseHash(window.location.hash);
 
         if (hash && hash.id_token) {
