--- a/custom-sms.html
+++ b/custom-sms.html
@@ -45,37 +45,37 @@
     </div>
     <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
     <script type="text/javascript">
-      'use strict';
+
       // Initialize Auth0 Client instance
-      const auth0 = new Auth0({
+      var auth0 = new Auth0({
         // All these properties are set in auth0-variables.js
         clientID: AUTH0_CLIENT_ID,
         domain: AUTH0_DOMAIN
       });
 
       function sendSMS(){
-        const phoneNumber = $('input.phone-number').val();
-        auth0.startPasswordless({ phoneNumber}, err => {
+        var phoneNumber = $('input.phone-number').val();
+        auth0.startPasswordless({ phoneNumber: phoneNumber}, function(err) {
           if (err) {
             console.log('error sending SMS',err.error_description);
-            alert(`error sending SMS: ${err.error_description}`);
+            alert('error sending SMS: '+ err.error_description);
             return;
           }
           // the request was successful and you should 
           // receive the passcode to the specified phone
-          $(".enter-phone").hide();
-          $(".enter-code").show();
+          $('.enter-phone').hide();
+          $('.enter-code').show();
         });
       }
 
       function login(){
-        const phone = $('input.phone-number').val();
-        const passcode = $('input.code').val();
+        var phone = $('input.phone-number').val();
+        var passcode = $('input.code').val();
         //submit the passcode to authenticate the phone
-        auth0.login({phone,passcode},function(err, profile, id_token, access_token){
+        auth0.login({phone:phone,passcode:passcode},function(err, profile, id_token, access_token){
           if (err){
             console.log('error logging-in',err);
-            alert(`Couldn't login ${err.message}`);
+            alert('Couldn\'t login '+ err.message);
           } else {
             console.log('profile',profile);
             console.log('id_token',id_token);
