--- a/lock-email-code.html
+++ b/lock-email-code.html
@@ -32,7 +32,7 @@
           </div>
         </div>
     </div>
-    <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
+    <script src="https://cdn.auth0.com/js/lock-passwordless-0.1.min.js"></script>
     <script type="text/javascript">
       // Initialize Passwordless Lock instance
       var lock = new Auth0LockPasswordless(
