--- a/lock-magic-link.html
+++ b/lock-magic-link.html
@@ -33,8 +33,7 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.auth0.com/js/lock-passwordless-0.js"></script>
-    <script src="https://cdn.auth0.com/w2/auth0-6.6.js"></script>
+    <script src="https://cdn.auth0.com/js/lock-passwordless-0.1.min.js"></script>
     <script type="text/javascript">
       // Initialize Passwordless Lock instance
       var lock = new Auth0LockPasswordless(
@@ -43,31 +42,28 @@
         AUTH0_DOMAIN
       );
 
-      var auth0 = new Auth0({
-        // All these properties are set in auth0-variables.js
-        clientID: AUTH0_CLIENT_ID,
-        domain: AUTH0_DOMAIN
-      });
-
       function login(){
         lock.magiclink();
       }
 
       $(document).ready(function() {
 
-        var hash = auth0.parseHash(window.location.hash);
+        var hash = lock.parseHash(window.location.hash);
 
-        if (hash && hash.id_token) {
+        if (hash && hash.error) {
+          alert('There was an error: ' + hash.error + '\n' + hash.error_description);
+        }
+        else if (hash && hash.id_token) {
           //save the token in local storage:
           localStorage.setItem('id_token', hash.id_token);
           console.log('hash',hash);
           $('.login-box').hide();
           $('.logged-in-box').show();
           //retrieve profile
-          auth0.getProfile(hash.id_token, function (err, profile) {
+          lock.getProfile(hash.id_token, function (err, profile) {
             if (err){
               console.log('err',err);
-              alert(`There was an error retrieving your profile: ${err.message}`);
+              alert('There was an error retrieving your profile: ' + err.message);
             } else {
               localStorage.setItem('profile', profile);
               $('.nickname').text(profile.name);
@@ -76,9 +72,7 @@
           });
         }
 
-        if (hash && hash.error) {
-          alert('There was an error: ' + hash.error + '\n' + hash.error_description);
-        }
+
       });
     </script>
   </body>
