--- a/custom-email-code.html
+++ b/custom-email-code.html
@@ -50,7 +50,8 @@
       var auth0 = new Auth0({
         // All these properties are set in auth0-variables.js
         clientID: AUTH0_CLIENT_ID,
-        domain: AUTH0_DOMAIN
+        domain: AUTH0_DOMAIN,
+        callbackURL: location.href
       });
 
       function sendEmail(){
