--- a/lock-magic-link.html
+++ b/lock-magic-link.html
@@ -43,7 +43,7 @@
       );
 
       function login(){
-        lock.magiclink();
+        lock.magiclink( {callbackURL: location.href} );
       }
 
       $(document).ready(function() {
