--- a/custom-magic-link.html
+++ b/custom-magic-link.html
@@ -20,9 +20,10 @@
     <div class="container">
       <div class="login-page clearfix">
         <div class="login-box auth0-box before">
-          <img src="https://i.cloudup.com/StzWWrY34s.png" />
+          <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with a Magic Link sent to your email</p>
+          <div class="alert alert-warning">Don't forget to add your page's URL <strong><script type="text/javascript">document.write(location.href)</script></strong> to your App's <strong>Allowed Callback URLs</strong> list in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a></div>
           <div class="enter-phone">
             <label>Enter your email:</label>
             <input class="email"/>
@@ -49,8 +50,7 @@
       var auth0 = new Auth0({
         // All these properties are set in auth0-variables.js
         clientID: AUTH0_CLIENT_ID,
-        domain: AUTH0_DOMAIN,
-        callbackURL: location.href
+        domain: AUTH0_DOMAIN
       });
 
       function sendMagicLink(){
