--- a/custom-sms.html
+++ b/custom-sms.html
@@ -20,10 +20,11 @@
     <div class="container">
       <div class="login-page clearfix">
         <div class="login-box auth0-box before">
-          <img src="https://i.cloudup.com/StzWWrY34s.png" />
+          <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with SMS</p>
           <div class="enter-phone">
+            <div class="alert alert-warning">Don't forget to add your page's origin <strong><script type="text/javascript">document.write(location.origin)</script></strong> to your App's <strong>Allowed Origins (CORS)</strong> in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a>, unless it is already in the list of <strong>Allowed Callback URLs.</strong></div>
             <label>Enter your mobile number:</label>
             <input class="phone-number"/>
             <br><br>
@@ -50,8 +51,7 @@
       var auth0 = new Auth0({
         // All these properties are set in auth0-variables.js
         clientID: AUTH0_CLIENT_ID,
-        domain: AUTH0_DOMAIN,
-        callbackURL: location.href
+        domain: AUTH0_DOMAIN
       });
 
       function sendSMS(){
