--- a/lock-magic-link.html
+++ b/lock-magic-link.html
@@ -21,9 +21,10 @@
     <div class="container">
       <div class="login-page clearfix">
         <div class="login-box auth0-box before">
-          <img src="https://i.cloudup.com/StzWWrY34s.png" />
+          <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with a Magic Link sent by Email</p>
+          <div class="alert alert-warning">Don't forget to add your page's URL <strong><script type="text/javascript">document.write(location.href)</script></strong> to your App's <strong>Allowed Callback URLs</strong> list in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a></div>
           <button onclick="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</button>
         </div>
         <div class="logged-in-box auth0-box logged-in" style="display: none;">
@@ -43,7 +44,7 @@
       );
 
       function login(){
-        lock.magiclink( {callbackURL: location.href} );
+        lock.magiclink();
       }
 
       $(document).ready(function() {
