--- a/lock-sms.html
+++ b/lock-sms.html
@@ -10,17 +10,18 @@
     <!-- font awesome from BootstrapCDN -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
 
     <script src="auth0-variables.js"> </script>
-    <link href="app.css" rel="stylesheet">
   </head>
   <body class="home">
     <div class="container">
       <div class="login-page clearfix">
         <div class="login-box auth0-box before">
-          <img src="https://i.cloudup.com/StzWWrY34s.png" />
+          <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with SMS</p>
+          <div class="alert alert-warning">Don't forget to add your page's origin <strong><script type="text/javascript">document.write(location.origin)</script></strong> to your App's <strong>Allowed Origins (CORS)</strong> in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a>, unless it is already in the list of <strong>Allowed Callback URLs.</strong></div>
           <a ng-click="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</a>
         </div>
         <div class="logged-in-box auth0-box logged-in" style="display: none;">
@@ -44,8 +45,7 @@
         $('.btn-login').click(function(e) {
           e.preventDefault();
           var appearanceOpts = {
-            autoclose: true,
-            callbackURL: location.href
+            autoclose: true
           };
           // Open the lock in SMS mode with the ability to handle the authentication in page
           lock.sms(appearanceOpts,function (err, profile, id_token, access_token, state, refresh_token) {
