--- a/lock-email-code.html
+++ b/lock-email-code.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Auth0 Passwordless Example</title>
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
     <script src="//use.typekit.net/iws6ohy.js"></script>
