Update external JavaScript script tags
- bump version of jQuery to 2.2.4
- use https protocol only
- add crossorigin attributes

--- a/lock-magic-link.html
+++ b/lock-magic-link.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">   
     <title>Auth0 Passwordless Example</title>
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
 
-    <script src="//use.typekit.net/iws6ohy.js"></script>
+    <script src="https://use.typekit.net/iws6ohy.js" crossorigin="anonymous"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
