--- a/lock-sms.html
+++ b/lock-sms.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Auth0 Passwordless Example</title>
-    <script src="//use.typekit.net/iws6ohy.js"></script>
+    <script src="https://use.typekit.net/iws6ohy.js" crossorigin="anonymous"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
