Change and unify order of assets and markup
- meta tags first
- title after meta
- CSS first in the header after meta and title
- TypeKit embed code in header as per their
docs
- JS code in the bottom of the page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Auth0 Passwordless Samples for a JQuery Single Page App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Auth0 Passwordless Samples for a JQuery Single Page App</title>
     <!-- Bootstrap and Font Awesome from BootstrapCDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="app.css" rel="stylesheet">
+    <!-- TypeKit embed -->
+    <script src="https://use.typekit.net/iws6ohy.js" crossorigin="anonymous"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 	</head>
   <body>
     <div class="container index">
