--- a/lock-email-code.html
+++ b/lock-email-code.html
@@ -2,20 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Auth0 Passwordless Example</title>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
-
-    <script src="https://use.typekit.net/iws6ohy.js" crossorigin="anonymous"></script>
-    <script>try{Typekit.load();}catch(e){}</script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>Auth0 Passwordless Example</title>
     <!-- Bootstrap and Font Awesome from BootstrapCDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
-
-    <script src="auth0-variables.js"> </script>
     <link href="app.css" rel="stylesheet">
+    <!-- TypeKit embed -->
+    <script src="https://use.typekit.net/iws6ohy.js" crossorigin="anonymous"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
   </head>
   <body class="home">
     <div class="container">
@@ -34,6 +29,9 @@
           </div>
         </div>
     </div>
+    <!-- scripts -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
+    <script src="auth0-variables.js"></script>
     <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script>
     <script type="text/javascript">
       function login(){
