--- a/lock-sms.html
+++ b/lock-sms.html
@@ -19,7 +19,7 @@
           <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with SMS</p>
-          <div class="alert alert-warning">Don't forget to add your page's origin <strong><script type="text/javascript">document.write(location.origin)</script></strong> to your App's <strong>Allowed Origins (CORS)</strong> in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a>, unless it is already in the list of <strong>Allowed Callback URLs.</strong></div>
+          <div class="alert alert-warning">Don't forget to add your page's origin <strong><script>document.write(location.origin)</script></strong> to your App's <strong>Allowed Origins (CORS)</strong> in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a>, unless it is already in the list of <strong>Allowed Callback URLs.</strong></div>
           <a ng-click="login()" class="btn btn-primary btn-lg btn-login btn-block">SignIn</a>
         </div>
         <div class="logged-in-box auth0-box logged-in" style="display: none;">
@@ -33,7 +33,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
     <script src="auth0-variables.js"></script>
     <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script>
-    <script type="text/javascript">
+    <script>
       $(document).ready(function() {
         $('.btn-login').click(function(e) {
           e.preventDefault();
