--- a/custom-magic-link.html
+++ b/custom-magic-link.html
@@ -19,7 +19,7 @@
           <img class="logo" src="https://i.cloudup.com/StzWWrY34s.png" />
           <h3>Auth0 Passwordless Example</h3>
           <p>Login with a Magic Link sent to your email</p>
-          <div class="alert alert-warning">Don't forget to add your page's URL <strong><script type="text/javascript">document.write(location.href)</script></strong> to your App's <strong>Allowed Callback URLs</strong> list in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a></div>
+          <div class="alert alert-warning">Don't forget to add your page's URL <strong><script>document.write(location.href)</script></strong> to your App's <strong>Allowed Callback URLs</strong> list in the <a target="_blank" href="https://manage.auth0.com">Auth0 dashboard</a></div>
           <div class="enter-phone">
             <label>Enter your email:</label>
             <input class="email"/>
@@ -42,7 +42,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
     <script src="auth0-variables.js"></script>
     <script src="https://cdn.auth0.com/w2/auth0-6.7.min.js"></script>
-    <script type="text/javascript">
+    <script>
       
       // Initialize Auth0 Client instance
       var auth0 = new Auth0({
